<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!--<com.baidu.mapapi.map.MapView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:text="@string/百度地图"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="181dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="47dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057">

        <Button
            android:id="@+id/kehu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/定点"
            android:textSize="16sp" />


        <Button
            android:id="@+id/add"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:text="@string/添加"
            android:textSize="16sp" />

        <Button
            android:id="@+id/des"
            android:layout_width="73dp"
            android:layout_height="match_parent"
            android:text="@string/圆形"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sure"
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:text="@string/多边形"
            android:textSize="16sp" />

        <Button
            android:id="@+id/dice"
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:text="@string/取消"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="418dp"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.baidu.mapapi.map.MapView
            android:id="@+id/map"
            android:layout_width="412dp"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="82dp"
        android:layout_height="42dp"
        android:text="@string/绑定"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>